--- a/cv/cv.html
+++ b/cv/cv.html
@@ -33,7 +33,7 @@
 
                 <!---- titre formation scolaire---->
 
-        <div id="titre1"> <h1> <button onclick="bouton3
+        <div id="titre1"> <h1> <button id="cc" onclick="bouton3
         ()"> - </button> formation scolaire :</h1>
         </div>
 
@@ -84,7 +84,7 @@
 
             <!--------- titre xp pro---------->
 
-        <div id="titre2"> <h1> <button onclick="bouton1()"> - </button> Expériences ou expériences professionnelles :</h1> </div>
+        <div id="titre2"> <h1> <button id="aa" onclick="bouton1()"> - </button> Expériences ou expériences professionnelles :</h1> </div>
 
         <!------------ corps xp pro--------->
 
@@ -136,7 +136,7 @@
 
             <!----- titre divers----->
 
-        <div id="titre3"> <h1> <button onclick="bouton2()"> - </button> Expériences diverses :</h1> </div>
+        <div id="titre3"> <h1> <button id="bb" onclick="bouton2()"> - </button> Expériences diverses :</h1> </div>
 
             <!---- compétences----->
 
